# ChangeLog for x11-themes/gtk-engines-industrial
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-themes/gtk-engines-industrial/ChangeLog,v 1.6 2005/09/07 13:39:05 gustavoz Exp $

  07 Sep 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  gtk-engines-industrial-0.2.36.ebuild:
  Stable on sparc

  05 Sep 2005; Leonardo Boshell <leonardop@gentoo.org>
  gtk-engines-industrial-0.2.36.ebuild:
  Stable on x86.

  14 Aug 2005; Luis Medinas <metalgod@gentoo.org>
  gtk-engines-industrial-0.2.36.ebuild:
  Added ~amd64 keywords.

  05 Aug 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  gtk-engines-industrial-0.2.36.ebuild:
  Keyworded ~sparc

  04 Aug 2005; David Holm <dholm@gentoo.org>
  gtk-engines-industrial-0.2.36.ebuild:
  Added to ~ppc.

*gtk-engines-industrial-0.2.36 (03 Aug 2005)

  03 Aug 2005; Leonardo Boshell <leonardop@gentoo.org>
  gtk-engines-industrial-0.2.36.ebuild:
  New package. Initial work by Krzysiek Pawlik on bug #94305.