@@ -1,1 +1,3 @@
 MD5 d00ba16f31a9796f1aae7e7b68d16e8a gtk-industrial-engine_0.2.36-2.tar.gz 212139
+RMD160 fc1ab5f5dea62da587fd9a119d8ab7f6b3d64bb4 gtk-industrial-engine_0.2.36-2.tar.gz 212139
+SHA256 2060a9acef3d8b7273e7b765f8cd3d829db287011512c9c9ee73dc00aa320a9f gtk-industrial-engine_0.2.36-2.tar.gz 212139
